<resources>
    <string name="app_name" translatable="false">FarmSaction</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_ta" translatable="false">தமிழ்</string>
    <string name="language_hi" translatable="false">"हिंदी "</string>
    <string name="help">Help</string>
    <string name="google_login">Login with Google</string>
    <string name="language_key" translatable="false">User Language</string>
    <string name="phone_login_hint">Your Phone Number</string>
    <string name="phone_login">Login with Phone</string>
    <string name="api_key" translatable="false">1082382023226-5oasoufbd441p28uv5baagcg6s5t001a.apps.googleusercontent.com</string>
    <string name="otp">Submit OTP</string>
    <string name="language_selectLanguage" translatable="false">Select a language: </string>
    <string name="addExpense">Add an expense</string>
    <string name="addRevenue">Add a revenue</string>
    <string name="overall">Overall stats</string>
    <string name="newScanQR">Scan a QR Code</string>
    <string name="newManualInput">Enter manually</string>
    <string name="next">Next</string>
    <string name="chooseCrop">Choose Crop:</string>
    <string name="addItem">Add an item:</string>
    <string name="giveCategory">Select a category:</string>
    <string name="addCost">Cost:</string>
    <string name="addCrop">Select Crop:</string>
    <string name="add">Add</string>
    <string name="newSellForm">Sell Stuff</string>

    <string-array name="category">
        <item>General Expenditure</item>
        <item>Labour</item>
        <item>Electricity</item>
        <item>Fertilizer</item>
        <item>Pesticides</item>
        <item>Machinery</item>
        <item>Property taxes</item>
        <item>Custom Work</item>
        <item>Fuel</item>
        <item>Livestock</item>
        <item>Rent</item>
    </string-array>

</resources>
