<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LanguageActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@id+/language_SelectLanguage"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onLanguageSelect"
        android:text="@string/language_en"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onLanguageSelect"
        android:text="@string/language_ta"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onLanguageSelect"
        android:text="@string/language_hi"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>